<resources>
    <string name="app_name">NITKART</string>
    <string name="title_store">Store</string>
    <string name="title_sell">Sell</string>
    <string name="title_profile">Profile</string>

    <!--login-->
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="userName">User Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="seller_name">Seller Name</string>
    <string name="seller_phone">Seller Phone</string>
    <string name="seller_room">Seller Room</string>
    <string name="seller_email">Seller Email</string>
    <string name="seller_block">Seller Block</string>
    <string name="time_period">Time in months</string>
    <string name="product_price">Price</string>
    <string name="sell_submit">Post Ad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
</resources>
