<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.nitkart.SellActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ImageView
            android:id="@+id/imageViewAttach"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/ph_add_image" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:id="@+id/infoFill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_vertical"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_name"
                android:hint="Name, eg: bicycle, phone..."/>

            <EditText
                android:id="@+id/seller_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/seller_name"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/seller_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/seller_phone"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/seller_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/seller_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/seller_block"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/block"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/seller_block"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/seller_room"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/room"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/seller_room"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/time_period"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/time"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/time_period"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="phone"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_greyish" />

            <EditText
                android:id="@+id/price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/rupee"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/product_price"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="bottom"
        android:padding="4dp">

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/sell_submit"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
